# NevealDJ

./: build.sh
sound_engine/: .gitignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
sound_engine/src/: lib.rs
sound_engine/src/engine/: analysis.rs  audio.rs  core.rs  deck.rs  mixer.rs  mod.rs  state.rs  utils.rs
ui/: endpoints.js  index.html  main.js  package-lock.json  package.json  preload.js  tailwind.config.js
ui/config/: app-config.json  index.js
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: BottomBar.tsx  Browser.tsx  Deck.tsx  Decks.tsx  Explorer.tsx  Icon.tsx  Mixer.tsx  System.tsx  TopBar.tsx
ui/src/hooks/: ExpandWindow.tsx
ui/src/utils/: appEvents.ts
ui_frontend/: endpoints.js  main.js  package-lock.json  preload.js
ux_backend/: endpoint.js  package-lock.json  package.json
