[package]
name = "nevealdj_sound_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.7.0", features = ["napi4"] }
napi-derive = "3.4.0"
rodio = { version = "0.17.3", default-features = true, features = ["mp3"] }
lofty = "0.22.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "wav", "pcm"] }
rustfft = "6.1"
